--- a/webpage/index.html
+++ b/webpage/index.html
@@ -9,7 +9,6 @@
 
   </head>
   <body>
-    <h1>Welcome to www.noblenarrations.com!</h1>
-    <h2>Coming Soon!😀</h2>
+    <h1>I am ready to learn CSS flexbox!</h1>
   </body>
 </html>
