initiated header files and code

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -5,10 +5,13 @@
     <title>Atom</title>
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/stylesheets/master.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/master.css" type="text/css">
 
   </head>
   <body>
-    <h1>I am ready to learn CSS flexbox!</h1>
+    <!-- NAV BAR -->
+    <header>
+
+    </header>
   </body>
 </html>
