created header content div

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -11,7 +11,9 @@
   <body>
     <!-- NAV BAR -->
     <header>
-
+      <div id="header-content">
+        
+      </div>
     </header>
   </body>
 </html>
