--- a/webpage/index.html
+++ b/webpage/index.html
@@ -12,7 +12,15 @@
     <!-- NAV BAR -->
     <header>
       <div id="header-content">
-        
+
+        <div id="header-content-left">
+
+        </div>
+
+        <div id="header-content-right">
+
+        </div>
+
       </div>
     </header>
   </body>
