added colors, font styles, and placeholders

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -14,7 +14,13 @@
       <div id="header-content">
 
         <div id="header-content-left">
-
+          <ul id="ul-nav-left">
+            <li>Packages</li>
+            <li>Themes</li>
+            <li>Documentation</li>
+            <li>Blog</li>
+            <li>Discuss</li>
+          </ul>
         </div>
 
         <div id="header-content-right">
