--- a/webpage/index.html
+++ b/webpage/index.html
@@ -25,7 +25,10 @@
         </div>
 
         <div id="header-content-right">
-
+          <ul>
+            <li><img src="stylesheets/media/imgs/atom-door-icon.svg" alt="Sign-in icon"></li>
+            <li>Sign in</li>
+          </ul>
         </div>
 
       </div>
