created global variable file and hero content structure

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -13,7 +13,6 @@
     <!-- NAV BAR -->
     <header>
       <div id="header-content">
-
         <div id="header-content-left">
           <ul id="ul-nav-left">
             <li>Packages</li>
@@ -23,15 +22,21 @@
             <li>Discuss</li>
           </ul>
         </div>
-
         <div id="header-content-right">
           <ul>
             <li><img src="stylesheets/media/imgs/atom-door-icon.svg" alt="Sign-in icon"></li>
             <li>Sign in</li>
           </ul>
         </div>
-
       </div>
     </header>
+
+    <!-- HERO -->
+    <div id="hero">
+      <div id="hero-content">
+        
+      </div>
+    </div>
+
   </body>
 </html>
