--- a/webpage/index.html
+++ b/webpage/index.html
@@ -34,7 +34,16 @@
     <!-- HERO -->
     <div id="hero">
       <div id="hero-content">
-        
+        <div id="hero-content-top">
+
+          <div id="hero-content-top-ani">
+
+          </div>
+          <div id="hero-content-top-ul">
+
+          </div>
+          
+        </div>
       </div>
     </div>
 
