finished content for lis

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -43,12 +43,21 @@
             <ul>
               <li><img src="stylesheets/media/imgs/atom-logo-text.svg" alt="Atom logo"></li>
               <li>
-                <h1>1.32.1</h1><span>Release notes</span>
+                <h1>1.32.1</h1>
+                <span><a href="#">Release notes</a></span>
               </li>
               <li>
-                <h1>macOS</h1><span>For macOS 10.9 or later</span>
+                <h1>macOS</h1>
+                <span>For macOS 10.9 or later</span>
               </li>
-              <li></li>
+
+              <li>
+                <!-- DOWNLOAD BUTTON -->
+                <a href="#"><div>
+                    <img src="stylesheets/media/imgs/download-icon.svg" alt="Download button">
+                    <p>Download</p>
+                </div></a>
+              </li>
             </ul>
           </div>
 
