--- a/webpage/index.html
+++ b/webpage/index.html
@@ -62,8 +62,15 @@
           </div>
 
         </div>
-      </div>
-    </div>
+        <div id="hero-content-bottom">
+          <p>By downloading you agree to the <a href="#">Terms and Conditions</a>.</p>
+          <ul>
+            <li><a href="#">Other Platforms</a></li>
+            <li><a href="#">Try Atom Beta</a></li>
+          </ul>
+        </div>
+      </div>   <!--hero content -->
+    </div> <!-- hero -->
 
   </body>
 </html>
