--- a/webpage/index.html
+++ b/webpage/index.html
@@ -72,5 +72,17 @@
       </div>   <!--hero content -->
     </div> <!-- hero -->
 
+    <!-- SUB HERO -->
+
+    <div id="sub-hero">
+      <div id="sub-hero-content">
+        <h1>A hackable <span>text editor</span> for the 21st Century</h1>
+        <ul>
+          <li><a href="#">Real-time collaboration</a></li>
+          <li><a href="#">IDE features</a></li>
+          <li><a href="#">Git and GitHub integration</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
