--- a/webpage/index.html
+++ b/webpage/index.html
@@ -84,5 +84,17 @@
         </ul>
       </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer>
+      <div id="footer-content">
+        <div id="footer-content-left">
+
+        </div>
+        <div id="footer-content-right">
+
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
