background structure and image for footer

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -89,6 +89,8 @@
     <footer>
       <div id="footer-content">
         <div id="footer-content-left">
+          <h2>Open source</h2>
+          <p></p>
 
         </div>
         <div id="footer-content-right">
