--- a/webpage/index.html
+++ b/webpage/index.html
@@ -90,7 +90,8 @@
       <div id="footer-content">
         <div id="footer-content-left">
           <h2>Open source</h2>
-          <p></p>
+          <p>Atom is open source. Be part of the Atom community or help improve your favorite text editor.</p>
+          <a href="#"><div>Fork on GitHub</div></a>
 
         </div>
         <div id="footer-content-right">
