sub-footer done

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -116,5 +116,26 @@
         </div>
       </div>
     </footer>
+
+    <!-- SUB FOOTER -->
+    <div id="sub-footer">
+      <div id="sub-footer-content">
+        <div id="sub-footer-content-left">
+          <ul>
+            <li> <a href="#"> Terms of Use</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Code of Conduct</a></li>
+            <li><a href="#">Releases</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div id="sub-footer-content-right">
+            <img src="stylesheets/media/imgs/with-love-logo.svg" alt="Coded with love from github">
+        </div>
+      </div>
+    </div>
+
+
   </body>
 </html>
